--- a/src/app/(protected)/calculators/page.module.scss
+++ b/src/app/(protected)/calculators/page.module.scss
@@ -1,34 +1,8 @@
-
-.calculatorCard {
-  box-sizing: border-box;
-  background-color:var(--primary-color);
-
-  & div:first-child {
-    padding: 0px !important;
-  }
-
-  &:hover {
-    background-color: var(--secondary-color);
-  }
-}
-
-.calculatorCardHeader {
-  font-size: 16px;
-  color: white;
-  margin: 0px;
-  padding: 16px;
-}
-
-.calculatorCardText {
-  margin: 0px;
-  padding: 0px 16px;
-  color: white;
-}
-
 .calculatorButton {
   background-color: white !important;
   color: #023932 !important;
-  border: 1px solid #E0E0E0;
+  border: 1px solid #e0e0e0;
+
   &:hover {
     border: 1px solid var(--primary-color) !important;
   }
