--- a/src/components/layout/navigation/navbar/styles.module.scss
+++ b/src/components/layout/navigation/navbar/styles.module.scss
@@ -21,6 +21,16 @@
     text-decoration: underline;
     text-underline-offset: 0.5rem;
   }
+
+  &.light {
+    a {
+      color: var(--light-green);
+    }
+
+    a:hover p {
+      color: var(--dark-green);
+    }
+  }
 }
 
 .sidebar {
@@ -49,7 +59,7 @@
   position: absolute;
   height: 2px;
   width: 100%;
-  background: #ffffff;
+  background: var(--light-green);
   border-radius: 9px;
   opacity: 1;
   right: 0;
@@ -61,6 +71,10 @@
   -moz-transition: 0.25s ease-in-out;
   -o-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
+}
+
+.hamburger.light span {
+  background: #ffffff;
 }
 
 .hamburger span:nth-child(1) {
@@ -114,4 +128,9 @@
   &:focus {
     box-shadow: 0 0 15px rgba(var(--primary-color-rgb), $alpha: 1);
   }
+}
+
+.logo {
+  width: 210px;
+  height: 35px;
 }
