--- a/src/components/public/home/Home.module.scss
+++ b/src/components/public/home/Home.module.scss
@@ -1,20 +1,40 @@
 .help-section-container {
-	background-color: rgba(var(--primary-color-rgb), 0.1);
-}
-
-.background-radial-gradient {
-	position: absolute;
-	width: 300px;
-	height: 300px;
-	background: radial-gradient(circle, #7ec09980 0%, rgba(131, 184, 153, 0) 65%);
+  background-color: rgba(var(--primary-color-rgb), 0.1);
 }
 
 .inner {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	border: 4px solid var(--primary-color);
-	top: 10px;
-	left: 25px;
-	z-index: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border: 4px solid var(--primary-color);
+  top: 10px;
+  left: 25px;
+  z-index: 0;
+}
+
+.hero-image {
+  position: relative;
+  padding-top: 20px;
+  padding-left: 20px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 20px;
+    bottom: 20px;
+    border: 4px solid var(--light-brown);
+    z-index: -1;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero-image {
+    padding: 0;
+
+    &::after {
+      display: none;
+    }
+  }
 }
