remove elephant background image

--- a/src/components/public/shared/CTASection/CTASection.module.scss
+++ b/src/components/public/shared/CTASection/CTASection.module.scss
@@ -8,7 +8,7 @@
 
   &.light {
     background-color: var(--light-brown);
-    background-image: url("/images/common/elephant-brown.svg");
+    background-image: none;
   }
 }
 
