--- a/src/components/layout/navigation/Navigation.module.scss
+++ b/src/components/layout/navigation/Navigation.module.scss
@@ -10,7 +10,11 @@
   }
 }
 
-.dark-background {
+.nav-light {
+  background-color: var(--beige);
+}
+
+.nav-dark {
   background-color: var(--secondary-color);
 }
 
