set default background color

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,7 +15,7 @@ body {
   font-family: var(--font-family);
   font-weight: normal;
   font-style: normal;
-  background-color: var(--surface-0);
+  background-color: var(--beige);
   color: var(--secondary-color);
 }
 
