--- a/src/components/layout/loading/Loading.module.scss
+++ b/src/components/layout/loading/Loading.module.scss
@@ -1,50 +1,48 @@
-
-
 .loader {
-	position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
-    z-index: 2000;
-    background-color: white;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  z-index: 2000;
+  background-color: white;
 }
 
 .one {
-	position: absolute;
-	border-radius: 50%;
-	background: var(--primary-color);
-	opacity: 0;
-	animation: loading 1.3s 0.65s infinite;
-	height: 20px;
-	width: 20px;
+  position: absolute;
+  border-radius: 50%;
+  background: var(--primary-color);
+  opacity: 0;
+  animation: loading 1.3s 0.65s infinite;
+  height: 20px;
+  width: 20px;
 }
 
 .two {
-	position: absolute;
-	border-radius: 50%;
-	background: var(--secondary-color);
-	opacity: 0;
-	animation: loading 1.3s infinite;
-	height: 20px;
-	width: 20px;
+  position: absolute;
+  border-radius: 50%;
+  background: var(--dark-green);
+  opacity: 0;
+  animation: loading 1.3s infinite;
+  height: 20px;
+  width: 20px;
 }
 
 @keyframes loading {
-	0% {
-		opacity: 0;
-		transform: scale(0.15);
-		box-shadow: 0 0 2px rgba(black, 0.1);
-	}
-	50% {
-		opacity: 1;
-		transform: scale(2);
-		box-shadow: 0 0 10px rgba(black, 0.1);
-	}
-	100% {
-		opacity: 0;
-		transform: scale(0.15);
-		box-shadow: 0 0 2px rgba(black, 0.1);
-	}
+  0% {
+    opacity: 0;
+    transform: scale(0.15);
+    box-shadow: 0 0 2px rgba(black, 0.1);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(2);
+    box-shadow: 0 0 10px rgba(black, 0.1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.15);
+    box-shadow: 0 0 2px rgba(black, 0.1);
+  }
 }
