--- a/src/components/secure/workflow/Workflow.module.scss
+++ b/src/components/secure/workflow/Workflow.module.scss
@@ -1,20 +1,17 @@
-@import 'primeflex/primeflex.scss';
+@import "primeflex/primeflex.scss";
 
 .container {
   display: flex;
   flex-direction: column;
   border: solid 2px var(--primary-color);
-  box-shadow: 0 0 2px 0 rgba(0,0,0,0.3);
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.3);
   margin: 5rem;
   height: calc(100vh - 20rem);
 }
 
-
-
-
 .edge:not(.selected):hover {
   background-color: #126e62 !important;
-  color:white !important;
+  color: white !important;
   border: none !important;
   cursor: pointer !important;
 }
@@ -25,7 +22,6 @@
   // color: #83B899 !important;
   cursor: pointer !important;
 }
-
 
 // MENU SELECTION
 
@@ -38,27 +34,24 @@
   justify-content: center;
 }
 
-
 .button {
   font-size: medium;
   font-weight: bold;
   margin: 5px 0;
   padding: 1rem;
   cursor: pointer;
-  border: 2px solid var(--secondary-color); 
+  border: 2px solid var(--dark-green);
   background-color: white; /* Background color for buttons */
-  border-radius: 5px; 
-  color: var(--secondary-color);
-&:hover {
-  background-color: var(--secondary-color);
-  border-color: var(--secondary-color);
-  color:white
+  border-radius: 5px;
+  color: var(--dark-green);
+  &:hover {
+    background-color: var(--dark-green);
+    border-color: var(--dark-green);
+    color: white;
+  }
+  &.selected {
+    background-color: var(--dark-green);
+    border-color: var(--dark-green);
+    color: white;
+  }
 }
-&.selected {
-  background-color: var(--secondary-color);
-  border-color: var(--secondary-color);
-  color:white
-}
-}
-
-
