--- a/src/components/shared/PDFExport/InputSummary/styles.module.scss
+++ b/src/components/shared/PDFExport/InputSummary/styles.module.scss
@@ -9,13 +9,13 @@
     padding: 8px;
     text-align: center;
     font-size: 12px;
-    border: 1px solid var(--surface-border);
+    border: 1px solid var(--light-green);
     border-collapse: collapse;
   }
 
   th {
-    background-color: var(--secondary-color);
-    color: var(--surface-0);
+    background-color: var(--dark-green);
+    color: var(--beige);
     word-wrap: normal;
   }
 
