--- a/src/components/secure/calculator/quiz.module.scss
+++ b/src/components/secure/calculator/quiz.module.scss
@@ -1,3 +1,9 @@
-.quiz-card--selected {
-  border-color: var(--teal-500) !important;
+.quiz-card {
+  border-style: solid;
+  border-color: var(--light-green);
+
+  &:hover,
+  &--selected {
+    border-color: var(--dark-brown);
+  }
 }
