--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1699,7 +1699,7 @@
 
 .p-selectbutton .p-button {
   background: var(--beige);
-  border: 1px solid rgba(0, 0, 0, 0.12);
+  border: 1px solid var(--light-green);
   color: var(--dark-green);
   transition: background-color 0.2s, border-color 0.2s, color 0.2s,
     box-shadow 0.2s, background-size 0.2s cubic-bezier(0.64, 0.09, 0.08, 1);
@@ -1709,9 +1709,9 @@
   color: rgba(0, 0, 0, 0.6);
 }
 .p-selectbutton .p-button:not(.p-disabled):not(.p-highlight):hover {
-  background: #f6f6f6;
-  border-color: rgba(0, 0, 0, 0.12);
-  color: var(--dark-green);
+  background: var(--light-green);
+  border-color: var(--light-green);
+  color: var(--beige);
 }
 .p-selectbutton
   .p-button:not(.p-disabled):not(.p-highlight):hover
@@ -1722,18 +1722,18 @@
   color: rgba(0, 0, 0, 0.6);
 }
 .p-selectbutton .p-button.p-highlight {
-  background: #e0e0e1;
-  border-color: #e0e0e1;
-  color: var(--dark-green);
+  background: var(--dark-green);
+  border-color: var(--dark-green);
+  color: var(--beige);
 }
 .p-selectbutton .p-button.p-highlight .p-button-icon-left,
 .p-selectbutton .p-button.p-highlight .p-button-icon-right {
   color: rgba(0, 0, 0, 0.6);
 }
 .p-selectbutton .p-button.p-highlight:hover {
-  background: #d9d8d9;
-  border-color: #d9d8d9;
-  color: var(--dark-green);
+  background: var(--dark-green);
+  border-color: var(--dark-green);
+  color: var(--beige);
 }
 .p-selectbutton .p-button.p-highlight:hover .p-button-icon-left,
 .p-selectbutton .p-button.p-highlight:hover .p-button-icon-right {
@@ -2021,14 +2021,14 @@
 }
 .p-button.p-button-text:enabled:hover,
 .p-button.p-button-text:not(button):not(a):not(.p-disabled):hover {
-  background: rgba(63, 81, 181, 0.04);
-  color: var(--dark-color);
+  background: var(--beige);
+  color: var(--dark-green);
   border-color: transparent;
 }
 .p-button.p-button-text:enabled:active,
 .p-button.p-button-text:not(button):not(a):not(.p-disabled):active {
   background: rgba(63, 81, 181, 0.16);
-  color: var(--dark-color);
+  color: var(--dark-green);
   border-color: transparent;
 }
 .p-button.p-button-text.p-button-plain {
@@ -5290,18 +5290,18 @@
 
 .p-tabview .p-tabview-nav {
   background: var(--beige);
-  border: solid rgba(0, 0, 0, 0.12);
+  border: solid var(--light-green);
   border-width: 0 0 1px 0;
 }
 .p-tabview .p-tabview-nav li {
   margin-right: 0;
 }
 .p-tabview .p-tabview-nav li .p-tabview-nav-link {
-  border: solid rgba(0, 0, 0, 0.12);
+  border: solid var(--light-green);
   border-width: 0 0 1px 0;
-  border-color: transparent transparent rgba(0, 0, 0, 0.12) transparent;
+  // border-color: transparent transparent rgba(0, 0, 0, 0.12) transparent;
   background: var(--beige);
-  color: rgba(0, 0, 0, 0.6);
+  color: var(--light-green);
   padding: 0.75rem 1.25rem;
   font-weight: 500;
   border-top-right-radius: 4px;
@@ -5318,21 +5318,21 @@
   .p-tabview-nav
   li:not(.p-highlight):not(.p-disabled):hover
   .p-tabview-nav-link {
-  background: rgba(63, 81, 181, 0.04);
-  border-color: rgba(0, 0, 0, 0.12);
-  color: rgba(0, 0, 0, 0.6);
+  // background: rgba(63, 81, 181, 0.04);
+  // border-color: rgba(0, 0, 0, 0.12);
+  color: var(--dark-brown);
 }
 .p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
   background: var(--beige);
-  border-color: rgba(0, 0, 0, 0.12);
-  color: var(--primary-color);
+  border-color: var(--dark-green);
+  color: var(--dark-green);
 }
 .p-tabview .p-tabview-close {
   margin-left: 0.5rem;
 }
 .p-tabview .p-tabview-nav-btn.p-link {
   background: var(--beige);
-  color: var(--primary-color);
+  color: var(--dark-green);
   width: 2.25rem;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
@@ -7854,7 +7854,7 @@
 .p-button.p-button-text:not(button):not(a):not(.p-disabled):focus,
 .p-button.p-button-outlined:enabled:focus,
 .p-button.p-button-outlined:not(button):not(a):not(.p-disabled):focus {
-  background: rgba(63, 81, 181, 0.12);
+  background: var(--beige);
 }
 .p-button.p-button-text:enabled:active,
 .p-button.p-button-text:not(button):not(a):not(.p-disabled):active,
@@ -9643,8 +9643,8 @@
   border-color: #e0e0e1;
 }
 .p-selectbutton .p-button:focus.p-highlight {
-  background: #d9d8d9;
-  border-color: #d9d8d9;
+  background: var(--dark-green);
+  border-color: var(--dark-green);
 }
 
 .p-slidemenu .p-menuitem-link:focus {
@@ -9885,7 +9885,7 @@
   background-color: rgba(63, 81, 181, 0.16);
 }
 .p-tabview .p-tabview-nav li .p-tabview-nav-link:focus {
-  background-color: rgba(63, 81, 181, 0.12);
+  background-color: var(--light-brown);
 }
 .p-tabview .p-tabview-nav .p-tabview-ink-bar {
   z-index: 1;
@@ -9893,7 +9893,7 @@
   position: absolute;
   bottom: 0;
   height: 2px;
-  background-color: var(--primary-color);
+  background-color: var(--dark-green);
   transition: 500ms cubic-bezier(0.35, 0, 0.25, 1);
 }
 
