--- a/src/components/shared/PDFExport/PDFContent/styles.module.scss
+++ b/src/components/shared/PDFExport/PDFContent/styles.module.scss
@@ -1,9 +1,5 @@
-.bg-color {
-  background-color: var(--dark-green);
-}
-
 .separator {
-  border-bottom: 1px solid var(--dark-green);
+  border-bottom: 1px solid var(--light-green);
 }
 
 .break-all {
