--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,7 +16,7 @@ body {
   font-weight: normal;
   font-style: normal;
   background-color: var(--beige);
-  color: var(--dark-green);
+  color: var(--light-green);
 }
 
 /* ===== Scrollbar CSS ===== */
