--- a/src/styles/calculator-explore.scss
+++ b/src/styles/calculator-explore.scss
@@ -28,3 +28,31 @@
     }
   }
 }
+
+.calculator-carousel {
+  .swiper-pagination-bullet {
+    width: 20px !important;
+    height: 20px !important;
+    border-radius: 100% !important;
+    background-color: var(--beige) !important;
+    opacity: 1 !important;
+    margin: 0 16px !important;
+  }
+
+  .swiper-pagination-bullet-active {
+    background-color: var(--dark-green) !important;
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    border: 2px solid var(--dark-green);
+    width: 48px !important;
+    height: 48px !important;
+    border-radius: 100%;
+
+    &::after {
+      font-size: 24px !important;
+      color: var(--dark-green) !important;
+    }
+  }
+}
