add favorites tagline

--- a/src/app/(protected)/explore-all/page.module.scss
+++ b/src/app/(protected)/explore-all/page.module.scss
@@ -10,8 +10,8 @@
 
   &:hover,
   &--highlighted {
-    color: var(--dark-brown) !important;
-    border-color: var(--dark-brown) !important;
+    color: var(--beige) !important;
+    border-color: var(--beige) !important;
   }
 }
 
