update explore all page tab content styling

--- a/src/app/(protected)/explore-all/page.module.scss
+++ b/src/app/(protected)/explore-all/page.module.scss
@@ -5,17 +5,21 @@
 
 .calculatorButton {
   background-color: transparent !important;
-  color: var(--light-green) !important;
-  border: 1px solid var(--light-green) !important;
+  color: var(--beige) !important;
+  border: 1px solid var(--beige) !important;
 
   &:hover,
   &--highlighted {
-    color: var(--beige) !important;
-    border-color: var(--beige) !important;
+    border-color: var(--dark-brown) !important;
   }
 }
 
 .calculatorButtonSection {
   max-height: 500px;
   overflow-y: auto;
+}
+
+.content {
+  max-width: 880px;
+  margin: 0 auto;
 }
