replace brown background with beige color in pdf export

--- a/src/components/shared/PDFExport/InputSummary/styles.module.scss
+++ b/src/components/shared/PDFExport/InputSummary/styles.module.scss
@@ -25,7 +25,7 @@
     }
 
     tr:nth-of-type(2n) {
-      background-color: var(--light-brown);
+      background-color: var(--beige);
     }
   }
 }
