--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -23,7 +23,7 @@
   --surface-100: #f5f5f5;
   --surface-200: #eeeeee;
   --surface-300: #e0e0e0;
-  --border-light-green: #bdbdbd;
+  --border-extreme-light-green: #bdbdbd;
   --surface-500: #9e9e9e;
   --surface-600: #757575;
   --surface-700: #616161;
@@ -10308,6 +10308,10 @@
 
 .border-light-green {
   border-color: var(--light-green) !important;
+}
+
+.border-extreme-light-green {
+  border-color: var(--border-extreme-light-green) !important;
 }
 
 .border-beige {
