[IV-290] Dev Audit Fix

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -10326,6 +10326,10 @@
   border-color: var(--dark-brown);
 }
 
+.border-round-full {
+  border-radius: 50%;
+}
+
 .white-space-preline {
   white-space: pre-line;
 }
