--- a/src/components/secure/requests/styles.module.scss
+++ b/src/components/secure/requests/styles.module.scss
@@ -42,6 +42,9 @@
     resize: none;
     padding: 12px;
     height: 120px;
+    background-color: var(--beige);
+    font-family: var(--font-family);
+    font-size: 16px;
 
     @media screen and (max-width: 768px) {
       width: 100%;
