add implant borne crown issues

--- a/src/components/secure/calculator/quiz.module.scss
+++ b/src/components/secure/calculator/quiz.module.scss
@@ -10,5 +10,10 @@
 }
 
 .heading {
-  max-width: 80%;
+  max-width: 70%;
+
+  @media screen and (max-width: 768px) {
+    max-width: initial;
+    padding-left: 80px;
+  }
 }
