--- a/src/components/public/shared/ScrollCard/ScrollCard.module.scss
+++ b/src/components/public/shared/ScrollCard/ScrollCard.module.scss
@@ -1,65 +1,54 @@
 .scroll-card {
+  display: flex;
+  position: relative;
   opacity: 1;
-  display: flex;
-  justify-content: center;
-}
 
-.line-container {
-  display: none;
-}
+  @media screen and (max-width: 1200px) {
+    justify-content: center !important;
 
-.card {
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  display: flex;
-  background: var(--light-brown);
-  padding: 1rem;
-  border-radius: 5px;
-  font-size: 1.2rem;
-  color: var(--dark-green);
-  width: 80%;
-  height: 125px;
-}
+    &__line-container {
+      display: none;
+    }
 
-.circle {
-  position: absolute;
-
-  top: 50%;
-  transform: translateY(-50%);
-  circle {
-    transform-origin: center;
-
-    animation: pulse 1.5s infinite;
-  }
-}
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  50% {
-    transform: scale(1.2);
-    opacity: 0.7;
-  }
-  100% {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .scroll-card {
-    opacity: 0;
+    &__description {
+      width: 50% !important;
+    }
   }
 
-  .line-container {
+  &.line-right {
+    justify-content: flex-end;
+  }
+
+  &.line-left {
+    justify-content: flex-start;
+  }
+
+  &.line-left &__line-container {
+    left: 100%;
+  }
+
+  &.line-right &__line-container {
+    right: 100%;
+  }
+
+  &__line-container {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  &__description {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     display: flex;
-    position: relative;
-  }
-
-  .card {
+    background: var(--light-brown);
+    padding: 1rem;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    color: var(--dark-green);
     width: 250px;
     height: 150px;
+    position: relative;
   }
 }
