--- a/src/components/public/about/About.module.scss
+++ b/src/components/public/about/About.module.scss
@@ -12,7 +12,6 @@
   position: relative;
   width: 100%;
   height: 500px;
-  padding: 20px 0 0 20px;
 
   &::after {
     content: "";
@@ -37,5 +36,26 @@
     &::after {
       display: none;
     }
+  }
+}
+
+.content-video-scroller {
+  flex: auto;
+  & .video-wrapper {
+    position: sticky;
+    top: 200px;
+    left: 0;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+  }
+
+  & .video {
+    max-width: 750px;
+    width: 100%;
+  }
+  & .scrollSection {
+    display: block;
   }
 }
