--- a/src/components/public/about/About.module.scss
+++ b/src/components/public/about/About.module.scss
@@ -11,7 +11,6 @@
 .video {
   position: relative;
   width: 100%;
-  height: 500px;
 
   &::after {
     content: "";
@@ -43,7 +42,7 @@
   flex: auto;
   & .video-wrapper {
     position: sticky;
-    top: 200px;
+    top: 0px;
     left: 0;
     width: 100%;
 
@@ -52,8 +51,8 @@
   }
 
   & .video {
-    max-width: 750px;
     width: 100%;
+    height: 100vh;
   }
   & .scrollSection {
     display: block;
