--- a/src/components/public/about/About.module.scss
+++ b/src/components/public/about/About.module.scss
@@ -11,8 +11,6 @@
 .video {
   position: relative;
   width: 100%;
-  height: 500px;
-  padding: 20px 0 0 20px;
 
   &::after {
     content: "";
@@ -37,5 +35,26 @@
     &::after {
       display: none;
     }
+  }
+}
+
+.content-video-scroller {
+  flex: auto;
+  & .video-wrapper {
+    position: sticky;
+    top: 0px;
+    left: 0;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+  }
+
+  & .video {
+    width: 100%;
+    height: 100vh;
+  }
+  & .scrollSection {
+    display: block;
   }
 }
