--- a/src/components/public/about/About.module.scss
+++ b/src/components/public/about/About.module.scss
@@ -11,6 +11,8 @@
 .video {
   position: relative;
   width: 100%;
+  height: 500px;
+  padding: 20px 0 0 20px;
 
   &::after {
     content: "";
@@ -50,7 +52,8 @@
     justify-content: center;
   }
 
-  & .video {
+  & .video-custom {
+    position: relative;
     width: 100%;
     height: 100vh;
   }
