--- a/src/components/public/about/About.module.scss
+++ b/src/components/public/about/About.module.scss
@@ -56,6 +56,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    transition: 2s cubic-bezier(0.075, 0.82, 0.165, 1);
   }
   & .scrollSection {
     display: block;
