Create "Start over" button to bring user back to the first question.

--- a/src/components/secure/calculator/quiz.module.scss
+++ b/src/components/secure/calculator/quiz.module.scss
@@ -10,7 +10,16 @@
 }
 
 .heading {
-  max-width: 70%;
+  max-width: 40%;
+
+  @media screen and (max-width: 768px) {
+    max-width: initial;
+    padding-left: 80px;
+  }
+}
+
+.calculator-name {
+  max-width: 33%;
 
   @media screen and (max-width: 768px) {
     max-width: initial;
