[IV-385] update explore-all page

--- a/src/app/(protected)/explore-all/tab-content.module.scss
+++ b/src/app/(protected)/explore-all/tab-content.module.scss
@@ -1,5 +1,5 @@
 .tab-content {
-  max-width: 1020px;
+  max-width: 90%;
   margin: 0 auto;
 }
 
@@ -30,8 +30,12 @@
   border-style: solid;
   border-color: var(--light-green);
   border-width: 0;
-  max-height: calc(100vh - 472px);
+  height: calc(100vh - 472px);
   overflow-y: auto;
+
+  overflow-x: hidden;
+  padding-left: 180px;
+  padding-right: 180px;
 
   &:first-of-type {
     padding-right: 180px;
@@ -58,6 +62,9 @@
     &:not(:first-of-type) {
       padding-top: 40px;
     }
+
+    padding-left: 0;
+    padding-right: 0;
 
     &:first-of-type {
       padding-right: 0;
