--- a/src/app/(protected)/explore-all/tab-content.module.scss
+++ b/src/app/(protected)/explore-all/tab-content.module.scss
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  height: calc(100vh - 461px);
 
   @media screen and (max-width: 991px) {
     display: flex !important;
